force-app/main/default/objects/Territory_Assignment_Rule__c/Territory_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>This object is used to define the rules for recruitment auto territory assignment.</description>
    <label>Territory Assignment Rule</label>
    <nameField>
        <displayFormat>Rule-{0000}</displayFormat>
        <label>Auto Territory Assignment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>