force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Assignment_By_State__c.field-meta.xml
<CustomField>
    <fullName>Assignment_By_State__c</fullName>
    <label>Assignment By State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Armed Forces Americas</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>District of Columbia</fullName>
            </value>
            <value>
                <fullName>Federated States of Micronesia</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Guam</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Iowa</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Louisiana</fullName>
            </value>
            <value>
                <fullName>Maine</fullName>
            </value>
            <value>
                <fullName>Marshall Islands</fullName>
            </value>
            <value>
                <fullName>Maryland</fullName>
            </value>
            <value>
                <fullName>Massachusetts</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>Minnesota</fullName>
            </value>
            <value>
                <fullName>Mississippi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>