force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>Lake Havasu</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Poly</fullName>
            </value>
            <value>
                <fullName>Tempe</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>