force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Geomarket__c.field-meta.xml
<CustomField>
    <fullName>Geomarket__c</fullName>
    <label>Geomarket</label>
    <length>10</length>
    <type>Text</type>
</CustomField>