force-app/main/default/objects/Territory_Assignment_Rule__c/fields/National_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>National_Scholarship__c</fullName>
    <label>National Scholarship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>National Achievement Finalist</fullName>
            </value>
            <value>
                <fullName>National Achievement Semifinalist</fullName>
            </value>
            <value>
                <fullName>National Hispanic Finalist</fullName>
            </value>
            <value>
                <fullName>National Merit Finalist</fullName>
            </value>
            <value>
                <fullName>National Merit Semifinalist</fullName>
            </value>
            <value>
                <fullName>Gammage Scholar</fullName>
            </value>
            <value>
                <fullName>Flinn Designate</fullName>
            </value>
            <value>
                <fullName>Flinn Semifinalist</fullName>
            </value>
            <value>
                <fullName>Flinn Finalist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>