force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Graduate</fullName>
            </value>
            <value>
                <fullName>Law</fullName>
            </value>
            <value>
                <fullName>First Time Freshman</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Non-Degree</fullName>
            </value>
            <value>
                <fullName>Readmission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>