force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Previous_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_User_ID__c</fullName>
    <label>Previous User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>