force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Range_End__c.field-meta.xml
<CustomField>
    <fullName>Range_End__c</fullName>
    <inlineHelpText>Based on opportunities numbered 1-100, opportunities will be assigned ending at this number (MAX = 100)</inlineHelpText>
    <label>Range End</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>