force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Range_Start__c.field-meta.xml
<CustomField>
    <fullName>Range_Start__c</fullName>
    <description>Based on opportunities numbered 1-100, opportunities in countries that are split will be assigned starting at this number.</description>
    <label>Range Start</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>