force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Rule_Key__c.field-meta.xml
<CustomField>
    <fullName>Rule_Key__c</fullName>
    <formula>If (TEXT(Rule_Type__c) = 'Freshman Scholar',TEXT(Rule_Type__c), 
If (TEXT(Rule_Type__c) = 'International Admitted - Conditional',TEXT(Rule_Type__c), 
If (TEXT(Rule_Type__c) = 'International',TEXT(Rule_Type__c)+'|'+TEXT(Opportunity_Type__c) + '|' + TEXT(Assignment_by_Country__c), 
If (TEXT(Rule_Type__c) = 'Location',TEXT(Rule_Type__c)+'|'+TEXT(Location__c), 
If (TEXT(Rule_Type__c) = 'Geomarket',TEXT(Rule_Type__c)+'|'+TEXT(Opportunity_Type__c) + '|' + Geomarket__c, 
If (TEXT(Rule_Type__c) = 'State',TEXT(Rule_Type__c)+'|'+TEXT(Opportunity_Type__c) + '|' + TEXT(Assignment_By_State__c), 
If (TEXT(Rule_Type__c) = 'Default User',TEXT(Rule_Type__c)+'|'+TEXT(Opportunity_Type__c),'') 
))))))</formula>
    <label>Rule Key</label>
    <type>Text</type>
</CustomField>