force-app/main/default/objects/Territory_Assignment_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Freshman Scholar</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Geomarket</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Default User</fullName>
            </value>
            <value>
                <fullName>International Admitted - Conditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>