force-app/main/default/objects/Territory_Assignment_Rule__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Assign to?</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Auto_Territory_Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>