force-app/main/default/objects/Territory_Assignment_Rule__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>User__r.FirstName + " " + User__r.LastName</formula>
    <label>User Name</label>
    <type>Text</type>
</CustomField>