force-app/main/default/objects/Territory_Assignment_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Rule_Type__c</columns>
    <columns>User__c</columns>
    <columns>Assignment_by_Country__c</columns>
    <columns>Assignment_By_State__c</columns>
    <columns>Geomarket__c</columns>
    <columns>Campus__c</columns>
    <columns>Defer_Territory_Assignment__c</columns>
    <columns>International__c</columns>
    <columns>Location__c</columns>
    <columns>National_Scholarship__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>