force-app/main/default/objects/Territory_Assignment_Rule__c/listViews/International2.listView-meta.xml
<ListView>
    <fullName>International2</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Rule_Type__c</columns>
    <columns>User__c</columns>
    <columns>Assignment_by_Country__c</columns>
    <columns>Assignment_By_State__c</columns>
    <columns>Geomarket__c</columns>
    <columns>Campus__c</columns>
    <columns>Defer_Territory_Assignment__c</columns>
    <columns>International__c</columns>
    <columns>Location__c</columns>
    <columns>National_Scholarship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Rule_Type__c</field>
        <operation>equals</operation>
        <value>International</value>
    </filters>
    <label>International</label>
</ListView>